# DragonRageRaylib

./: .dockerignore  .gitignore  AGENT.md  CMakeLists.txt  Dockerfile.windows-build  Makefile  README.md  docker-compose.yml
.codex/: README.md  config.toml
.codex/agents/: auditoria.toml  backend-fastapi-mvp.toml  backend.toml  documentacao.toml  frontend-componentizacao.toml  frontend.toml  infraestrutura.toml  mongodb.toml  orquestrador.toml  pr-feedback.toml  produto.toml  qualidade.toml
.codex/scripts/: playwright-mcp-visible.cmd
.codex/skills/audit-gap-handoff-bridge/: SKILL.md
.codex/skills/backend-service-workbench/: SKILL.md
.codex/skills/componentize-loop/: SKILL.md
.codex/skills/diagram-mermaid/: SKILL.md
.codex/skills/docker-local-github-azure-bridge/: SKILL.md
.codex/skills/docs-guardian/: SKILL.md
.codex/skills/encoding-fix/: SKILL.md
.codex/skills/execution-orchestration-governor/: SKILL.md
.codex/skills/frontend-delivery-workbench/: SKILL.md
.codex/skills/frontend-styleguide-conformance/: SKILL.md
.codex/skills/gap-hunter/: SKILL.md
.codex/skills/git-delivery-audit-publisher/: SKILL.md
.codex/skills/implement-audit/: SKILL.md
.codex/skills/playwright-feature-qa-auditor/: SKILL.md
.codex/skills/prd-product-development-planner/: SKILL.md
.github/workflows/: build-macos.yml
cmake/toolchains/: mingw-w64-x86_64.cmake
docs/: PS2_VISUAL_GUIDE.md  blender-track-authoring.md  character-controller-plan.md  interaction-dialogue-plan.md  level-pipeline-implementation-plan.md  level-sidebar-plan.md  lighting-and-shadows-plan.md  night-meets-plan.md  physics-collision-plan.md  road-surface-physics-plan.md
resources/character/: chartest.json
resources/config/: camera.json  levels.json  person.json  vehicle.json
resources/levels/: car_meet.glb  car_meet.json  levelteste.glb  levelteste.json
resources/models/: Building.glb  CockpitF1.glb  LowPolyMazda.glb  Mazda.glb  Road.blend  Road.blend1  RoadAsphalt.glb  mach5.glb
scripts/: build_linux.sh  build_macos.sh  build_windows.sh  check_linux_deps.sh  run_linux.sh
src/: gameState.hpp  interactionSystem.cpp  interactionSystem.hpp  main.cpp  personCollision.cpp  personCollision.hpp  personController.cpp  personController.hpp  roads.cpp  roads.hpp  scenery.cpp  scenery.hpp  staticWorld.cpp  staticWorld.hpp  sysSettings.cpp  ui.cpp  ui.hpp  utils.hpp  vehiclePhysics.cpp  vehiclePhysics.hpp
src/debug/: cameraDebug.cpp  cameraDebug.hpp  levelDebugDraw.cpp  levelDebugDraw.hpp
src/game/: gameWorld.hpp
src/level/: levelData.hpp  levelLoader.cpp  levelLoader.hpp  levelRuntimeConfig.cpp  levelRuntimeConfig.hpp  levelsConfig.cpp  levelsConfig.hpp
src/physics/: collider.cpp  collider.hpp  collisionLayers.hpp  collisionPair.hpp  contact.hpp  narrowphase.cpp  narrowphase.hpp  physicsBody.cpp  physicsBody.hpp  physicsMaterial.hpp  physicsWorld.cpp  physicsWorld.hpp  rigidBody.cpp  rigidBody.hpp  shape.hpp  staticBody.cpp  staticBody.hpp  transform3d.hpp  triggerArea.cpp  triggerArea.hpp
src/render/: fogRenderer.cpp  fogRenderer.hpp
(+72 files in other folders)
